js/src/tests/test262/built-ins/Error/prototype/stack/setter-no-argument.js


















var set = Object.getOwnPropertyDescriptor(Error.prototype, 'stack').set;

for (var i = 0; i < nativeErrors.length; ++i) {
  var Ctor = nativeErrors[i];
  var err = new Ctor('msg');

  assert.throws(TypeError, function () {
    set.call(err);
  }, Ctor.name);
}

reportCompare(0, 0);
